--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-android-compiler:2.42"
+
+    // Compose Navigation
+    implementation("androidx.navigation:navigation-compose:2.6.0-alpha04")
 }
