--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.eks.todoapp'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.eks.todoapp"
         minSdk 29
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -74,6 +74,7 @@ dependencies {
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-android-compiler:2.42"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Compose Navigation
     implementation("androidx.navigation:navigation-compose:2.6.0-alpha04")
